--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -4,14 +4,25 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="5dp">
-    <EditText
-        android:id="@+id/channel"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:ems="10"
-        android:text="@string/channel_name_prefix"
-        android:inputType="text"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/channel_name_prefix" />
+        <EditText
+            android:id="@+id/channel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:ems="10"
+            android:layout_weight="1"
+            android:inputType="text"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/join_button"
         android:layout_width="fill_parent"
