Show more information in the channel list view

--- a/app/src/main/res/layout/channel_list_item.xml
+++ b/app/src/main/res/layout/channel_list_item.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/channel"
+    android:layout_height="wrap_content"
     android:padding="10dp"
-    >
+    android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/channel_name"
+        android:layout_height="wrap_content"
+        android:textStyle="bold" />
 
-</TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/channel_topic" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/channel_user_count" />
+
+</LinearLayout>
