android inspection changes

--- a/app/src/main/res/layout/activity_edit_alias.xml
+++ b/app/src/main/res/layout/activity_edit_alias.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
@@ -7,18 +8,20 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Command name" />
+        android:text="@string/alias_command_name" />
     <EditText
         android:id="@+id/command_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text" />
+        android:inputType="text"
+        android:importantForAutofill="no"
+        tools:ignore="LabelFor" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Each line will be treated as a separate command.\nInclude variables in your commands using $n where n is the number of the parameter, or use $n- to include all text after that parameter"
-        />
+        android:text="@string/alias_help"
+    />
 
     <EditText
         android:id="@+id/command_text"
@@ -27,7 +30,8 @@
         android:gravity="start"
         android:lines="5"
         android:importantForAutofill="no"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/save_button"
@@ -36,6 +40,4 @@
         android:background="@drawable/sl_button"
         android:textColor="@color/white"
         android:text="@string/edit_list_save_button" />
-
-
 </LinearLayout>
