--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -32,7 +32,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                 android:hint="@string/nickname_hint"
                 android:textColorHint="@color/white"
                 android:maxLines="1"
-                android:singleLine="true">
+                android:singleLine="true"
+                android:importantForAutofill="no"
+                android:inputType="text">
                 <requestFocus />
             </EditText>
             <Button
