--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white">
+                android:textColorHint="@color/white"
+                android:inputType="text"
+                android:importantForAutofill="no">
 
                 <requestFocus />
             </EditText>
